--- a/styles/style.less
+++ b/styles/style.less
@@ -32,3 +32,284 @@ body {
 img {
    max-width: 100%; 
 }
+
+// =========== login.php, register.php ===========
+.login-form-wrapper, .create-acc-wrapper, .reset-pass-wrapper {
+    width: 100%;
+    height: 100vh;
+    background: url('../images/bg-img1.jpg') center no-repeat;
+    background-size: cover;
+    filter: opacity(85%);
+    padding: 0 20px;
+}
+
+// =========== chat.php  ===========
+.chat-wrapper {
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ccc;
+    padding: 10px 20px;
+    
+    h1 {
+        margin: 70px 0 20px;
+        text-align: center;
+    }
+}
+
+#chat-container {
+    width: 50%;
+    margin: 10px auto 150px;
+    background-color: #bbb;
+    border: 1px solid #bbb;
+    border-bottom-width: 1px;
+    border-radius: 5px;
+ 
+    input, textarea {
+        background-color: @lightGrey;
+        border: 1px solid #bbb;
+    }
+
+    input::placeholder, textarea::placeholder {
+        color: @light777;
+    }
+
+    #submit-btn {
+        border-bottom-width: 1px; 
+    }
+
+    #show-messages {
+        padding: 10px;
+        border: 1px solid #e6e6e6;
+        border-bottom-width: 1px;
+        border-radius: 5px;
+        background: url('../images/bg-img1.jpg') center no-repeat;
+        background-size: cover;
+    }
+
+    #msg {
+        min-height: 100px;
+    }
+
+}
+
+@media screen and (max-width: 820px) {
+    #show-messages {
+        min-height: 350px;
+    }
+}
+
+@media screen and (min-width: 821px) {
+    #show-messages {
+        min-height: 500px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    #chat-container {
+        width: 80%;
+    }
+}
+
+footer {
+    width: 100%;
+    padding: 16px;
+    color: @white;
+    background-color: @dark555;
+    text-align: center;
+}
+
+// =========== Forms styles  ===========
+.form-container {
+    position: relative;
+    padding: 100px;
+}
+
+.login-wrapper, .signup-wrapper, .reset-wrapper {
+    box-shadow: 0 0 50px rgba(0,0,0,0.2);
+    max-width: 400px;
+    position: relative;
+    margin: 0 auto;
+    background-color: @white;
+}
+
+.login-title, .signup-title, .reset-title {
+    font-size: 28px;
+    color: @dark333;
+    padding-bottom: 20px;
+    margin: 0 0 20px;
+    text-align: center;
+}
+
+.login-block, .signup-block, .reset-block {
+    position: relative;
+    display: block;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 30px 40px;
+} 
+
+.login-wrapper, .signup-wrapper, .reset-wrapper, .chat-wrapper {
+    input, textarea {
+        display: inline-block;
+        width: 100%;
+        font-size: 16px;  
+        color: @dark333;
+        padding: 15px 20px;
+        height: 50px;
+        background-color: @white;
+        border: 1px solid #e6e6e6;
+        border-bottom-width: 3px;
+        border-radius: 5px;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease; 
+        outline: none;
+    }
+}
+
+.login-wrapper, .signup-wrapper, .reset-wrapper {
+    input:not(:last-child) {
+        margin-bottom: 20px;
+    }
+} 
+
+.login-wrapper, .signup-wrapper, .reset-wrapper {
+    input[type="email"]:focus,
+    input[type="email"]:active,
+    input[type="password"]:focus,
+    input[type="password"]:active {
+        border-color: @light777;
+    }
+}
+
+.login-wrapper, .signup-wrapper, .reset-wrapper, .chat-wrapper {
+    input[type="submit"] {
+        position: relative;
+        display: inline-block;
+        padding: 0 20px;
+        background-color: rgba(92, 92, 92, 0.5);
+        border: 1px solid @light777;
+        border-bottom-width: 3px; 
+        color: @dark222;
+        outline: none;
+        cursor: pointer;
+    }
+} 
+    
+.login-wrapper, .signup-wrapper, .reset-wrapper, .chat-wrapper {
+    input[type="submit"]:hover,
+    input[type="submit"]:focus {
+        background-color: rgba(150, 150, 150, 0.4);
+    }    
+}
+
+.checkbox-wrap{
+    margin-bottom: 20px;
+    
+    label {
+        display: inline-block;
+        font-size: 16px;  
+        color: @dark333;
+        padding: 0 20px;
+        line-height: 50px;
+        height: 50px;
+        padding: 0 10px;
+    }
+
+    #rememberme {
+        width: auto;
+        height: auto;
+        margin-bottom: 0;
+    }
+}
+
+.login-check-block {
+    margin-top: 30px;
+}
+
+.login-check {
+    line-height: 25px;
+    height: 25px;
+}
+
+.signup-check, .reset-check {
+    line-height: 40px;
+    height: 40px;
+}
+
+.login-check, .signup-check, .reset-check {
+    width: 100%;
+    font-size: 14px;
+    text-align: center;
+    color: @dark333;
+
+    a {
+        color: @dark333;
+    }
+    
+    a:hover, a:focus {
+        color: @dark222;
+        font-weight: bold;
+        transition: background-color 2s ease-out;
+    }
+} 
+
+// =========== Forms responsive styles ===========
+
+@media screen and (min-width: 318px) and (max-width: 510px) {
+    .login-form-wrapper {
+        padding: 0;    
+    }
+
+    .form-container {
+        padding: 17px;
+    }
+}
+
+@media screen and (min-width: 511px) and (max-width: 620px) {
+    .form-container {
+        padding: 50px;
+    }
+}
+
+// =========== Messages, Userpanel styles ===========
+
+.error {
+    width: 100%;
+    line-height: 50px;
+    text-align: center;
+    background-color: #f8d7da;
+    color: #721c24;
+    font-size: 18px;
+    border: 1px solid #f5c6cb;
+    border-radius: 4px;
+}
+
+.userpanel {
+    width: 100%;
+    padding: 10px 32px;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 16px;
+    line-height: 40px;
+    color: #040505;
+    background-color: @lightGrey;
+    border-bottom: 2px solid #aaa;
+    box-shadow: @shadow104;
+
+    a {
+        color: @white;
+        background-color: @dark333;
+        border: 1px solid @dark333;
+        text-decoration: none;
+        border: 0;
+        font-size: 14px;
+        padding: 0 10px;
+    }
+
+    a:hover {
+        background-color: @light777;
+        box-shadow: @shadow104;
+    }
+}
